--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
     "@types/node": "^16.18.104",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
+    "officeparser": "^4.1.1",
     "openai": "^4.55.3",
+    "papaparse": "^5.4.1",
+    "pdf-parse": "^1.1.1",
+    "pdfjs-dist": "^4.5.136",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-pdftotext": "^1.3.0",
     "react-router-dom": "^6.26.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.12",
+    "textract": "^2.5.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
