--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.104",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.3",
+    "file-saver": "^2.0.5",
     "officeparser": "^4.1.1",
     "openai": "^4.55.3",
     "papaparse": "^5.4.1",
@@ -56,6 +57,7 @@
     ]
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.7",
     "@types/react": "^18.3.3"
   }
 }
